--- a/src/document.ejs
+++ b/src/document.ejs
@@ -6,14 +6,13 @@
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Doly Mobile Template</title>
+	<title></title>
 </head>
 
 <body>
 	<div id="root"></div>
-	<!-- <script>
-    javascript:(function () { var script = document.createElement('script'); script.src="https://cdn.bootcss.com/eruda/1.5.4/eruda.min.js"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();
-  </script> -->
+	<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
+	<script>new VConsole();</script> 
 </body>
 
 </html>
