--- a/src/document.ejs
+++ b/src/document.ejs
@@ -11,8 +11,8 @@
 
 <body>
 	<div id="root"></div>
-	<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
-	<script>new VConsole();</script> 
+	<!-- <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
+	<script>new VConsole();</script> -->
 </body>
 
 </html>
