--- a/src/document.ejs
+++ b/src/document.ejs
@@ -11,8 +11,9 @@
 
 <body>
 	<div id="root"></div>
-	<!-- <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
-	<script>new VConsole();</script> -->
+	<!-- <script>
+    javascript: (function () { var script = document.createElement('script'); script.src = "https://cdn.bootcss.com/eruda/1.5.4/eruda.min.js"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();
+  </script> -->
 </body>
 
 </html>
